--- a/snakegame.css
+++ b/snakegame.css
@@ -19,7 +19,7 @@ body {
     height: 1vw;
     border-radius: 10px;
     float: left;
-    outline: 1px solid red;
+    outline: 1px solid rgb(83, 83, 83);
 }
 
 
